Enable checks for fixed issues