@@ -10,10 +10,6 @@ public enum WhitelistLogLines {
             // Some artifacts names...
             Pattern.compile(".*maven-error-diagnostics.*"),
             Pattern.compile(".*errorprone.*"),
-            // https://github.com/quarkusio/quarkus/issues/27307
-            Pattern.compile(".*Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports.*"),
-            // https://github.com/quarkusio/quarkus/issues/28799 (should be removed once 2.14.0.Final is out)
-            Pattern.compile(".*java.lang.RuntimeException: Error reading stream.*"),
             // https://github.com/quarkusio/quarkus/pull/28810
             Pattern.compile(".*Stream is closed, ignoring and trying to continue.*"),
     }),
@@ -23,10 +19,6 @@ public enum WhitelistLogLines {
             Pattern.compile(".*errorprone.*"),
             // Well, the RestClient demo probably should do some cleanup before shutdown...?
             Pattern.compile(".*Closing a class org.jboss.resteasy.client.jaxrs.engines.ApacheHttpClient.*"),
-            // https://github.com/quarkusio/quarkus/issues/27307
-            Pattern.compile(".*Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports.*"),
-            // https://github.com/quarkusio/quarkus/issues/28799 (should be removed once 2.14.0.Final is out)
-            Pattern.compile(".*java.lang.RuntimeException: Error reading stream.*"),
             // https://github.com/quarkusio/quarkus/pull/28810
             Pattern.compile(".*Stream is closed, ignoring and trying to continue.*"),
             // GH Action runners are slow, graceful shutdown is not guaranteed on Quarkus
@@ -77,20 +69,10 @@ public enum WhitelistLogLines {
             Pattern.compile(".*SRMSG18212: Message.*was not sent to Kafka topic.*nacking message.*"),
             Pattern.compile(".*SRMSG18206: Unable to write to Kafka from channel.*"),
             Pattern.compile(".*io.smallrye.mutiny.subscription.MultiSubscriber.onError\\(MultiSubscriber.java.*"),
-            // https://github.com/quarkusio/quarkus/issues/27307
-            Pattern.compile(".*Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports.*"),
-            // https://github.com/quarkusio/quarkus/issues/28799 (should be removed once 2.14.0.Final is out)
-            Pattern.compile(".*java.lang.RuntimeException: Error reading stream.*"),
             // https://github.com/quarkusio/quarkus/pull/28810
             Pattern.compile(".*Stream is closed, ignoring and trying to continue.*"),
-            // https://github.com/quarkusio/quarkus/issues/29206
-            Pattern.compile(".*Failed to index org.osgi.annotation.bundle.Requirements.*"),
-            // https://github.com/quarkusio/quarkus/issues/29215
-            Pattern.compile(".*These configurations '\\[wildfly.sasl.relax\\-compliance\\]' were supplied but are not used yet.*"),
             // https://github.com/quarkusio/quarkus/pull/28654
             Pattern.compile(".*Using legacy gRPC support, with separate new HTTP server instance. Switch to single HTTP server instance usage with quarkus.grpc.server.use-separate-server=false property.*"),
-            // https://github.com/quarkusio/quarkus/issues/32461
-            Pattern.compile(".*Cannot find the `native-image` in the GRAALVM_HOME, JAVA_HOME and System PATH. Install it using `gu install native-image` Attempting to fall back to container build.*"),
     }),
     // Quarkus is not being gratefully shutdown in Windows when running in Dev mode.
     // Reported by https://github.com/quarkusio/quarkus/issues/14647.
